RESOLVED FIXED201383
[WHLSL] Resources don't work when only a subset of a bind group is referenced by a shader
https://bugs.webkit.org/show_bug.cgi?id=201383
Summary [WHLSL] Resources don't work when only a subset of a bind group is referenced...
Myles C. Maxfield
Reported 2019-09-01 02:51:28 PDT
[WHLSL] Resources don't work when only a subset of a bind group is referenced by a shader
Attachments
Patch (27.99 KB, patch)
2019-09-01 03:01 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2019-09-01 03:01:32 PDT
WebKit Commit Bot
Comment 2 2019-09-01 16:08:44 PDT
Comment on attachment 377814 [details] Patch Clearing flags on attachment: 377814 Committed r249369: <https://trac.webkit.org/changeset/249369>
WebKit Commit Bot
Comment 3 2019-09-01 16:08:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-09-01 16:09:18 PDT
Radar WebKit Bug Importer
Comment 5 2019-09-01 16:09:20 PDT
WebKit Commit Bot
Comment 6 2019-09-01 21:35:07 PDT
Re-opened since this is blocked by bug 201394
Myles C. Maxfield
Comment 7 2019-09-01 22:23:57 PDT
Note You need to log in before you can comment on or make changes to this bug.